<!--ScrollView to allow user to scroll page-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="184dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/orange_flag"
                    app:srcCompat="@drawable/secondary_symptoms" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/memory_assessment_title"
                        android:textAppearance="?attr/textAppearanceHeadline6" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/memory_assesstment_description"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="16sp" />


                    <!--App designed Buttons to continue/call ambulance -->

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="306dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp">


                        <CheckBox
                            android:id="@+id/memory_q3_no"
                            android:layout_width="52dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginStart="7dp"
                            android:layout_marginLeft="7dp"
                            android:layout_marginTop="128dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginRight="22dp"
                            android:text="@string/no" />

                        <CheckBox
                            android:id="@+id/memory_q2_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="22dp"
                            android:layout_marginLeft="22dp"
                            android:layout_marginTop="73dp"
                            android:layout_toEndOf="@+id/memory_q1"
                            android:layout_toRightOf="@+id/memory_q1"
                            android:text="@string/yes" />

                        <CheckBox
                            android:id="@+id/memory_q4_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="21dp"
                            android:layout_marginLeft="21dp"
                            android:layout_marginTop="182dp"
                            android:layout_toEndOf="@+id/memory_q1"
                            android:layout_toRightOf="@+id/memory_q1"
                            android:text="@string/yes" />

                        <CheckBox
                            android:id="@+id/memory_q5_yes"
                            android:layout_width="57dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="21dp"
                            android:layout_marginLeft="21dp"
                            android:layout_marginTop="238dp"
                            android:layout_marginBottom="19dp"
                            android:layout_toEndOf="@+id/memory_q1"
                            android:layout_toRightOf="@+id/memory_q1"
                            android:text="@string/yes" />

                        <CheckBox
                            android:id="@+id/memory_q1_yes"
                            android:layout_width="59dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="21dp"
                            android:layout_marginLeft="21dp"
                            android:layout_marginTop="18dp"
                            android:layout_toEndOf="@+id/memory_q1"
                            android:layout_toRightOf="@+id/memory_q1"
                            android:text="@string/yes" />

                        <CheckBox
                            android:id="@+id/memory_q1_no"
                            android:layout_width="52dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="18dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginRight="22dp"
                            android:text="@string/no" />

                        <TextView
                            android:id="@+id/memory_q1"
                            android:layout_width="159dp"
                            android:layout_height="45dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="29dp"
                            android:text="@string/Q1" />


                        <CheckBox
                            android:id="@+id/memory_q2_no"
                            android:layout_width="52dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/memory_q1_no"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="7dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginRight="22dp"
                            android:text="@string/no" />

                        <TextView
                            android:id="@+id/memory_q2"
                            android:layout_width="wrap_content"
                            android:layout_height="43dp"
                            android:layout_below="@+id/memory_q1"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="9dp"
                            android:text="@string/Q2" />


                        <TextView
                            android:id="@+id/memory_q3"
                            android:layout_width="wrap_content"
                            android:layout_height="38dp"
                            android:layout_below="@+id/memory_q2"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="11dp"
                            android:text="@string/Q3" />

                        <CheckBox
                            android:id="@+id/memory_q4_no"
                            android:layout_width="52dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginStart="7dp"
                            android:layout_marginLeft="7dp"
                            android:layout_marginTop="182dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginRight="22dp"
                            android:text="@string/no" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="46dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="248dp"
                            android:text="@string/Q4" />

                        <CheckBox
                            android:id="@+id/memory_q3_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="21dp"
                            android:layout_marginLeft="21dp"
                            android:layout_marginTop="128dp"
                            android:layout_toEndOf="@+id/memory_q1"
                            android:layout_toRightOf="@+id/memory_q1"
                            android:text="@string/yes" />

                        <CheckBox
                            android:id="@+id/memory_q5_no"
                            android:layout_width="53dp"
                            android:layout_height="48dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="238dp"
                            android:layout_marginEnd="22dp"
                            android:layout_marginRight="22dp"
                            android:layout_marginBottom="19dp"
                            android:text="@string/no" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="46dp"
                            android:layout_below="@+id/memory_q3"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="18dp"
                            android:text="@string/Q5" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/memory_call_ambulance"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"

                            android:onClick="onButtonClicked"
                            android:text="@string/call_ambulance" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/memory_continue_btn"
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:onClick="onButtonClicked"
                            android:text="@string/continue_diagnosis" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>